# shouxieai

./: README.md
bert/: text_cls_common.py  transformers-base.py  transformers-roberta-wma-test.py  transformers-roberta-wma.py  transformers_base.py  transformers_roberta_optimum.py  transformers_roberta_tensorrt.py  transformers_roberta_wma.py
cuda/: cudapython_matmul.py  cupy_matmul.py  numba_image.py  numba_matmul.py  pycuda_exp.py  pycuda_matmul.py  pycuda_matmul_sklin.py  test_numpy_multicores.py
cuda/pybind11/cuda/: CMakeLists.txt  test.py
cuda/pybind11/cuda/src/: democuda.cpp  democuda.cu
cuda/pybind11/noncuda/: CMakeLists.txt  test.py
cuda/pybind11/noncuda/src/: demo.cc  demo.h
deepspeed/: test.py
lvye/: gen_models.py  h5topb.py  loadpb.py  train.py
mnist-nsight-nvtx-amp/: main.py
ner/hemingkx-bert-lstm-crf/: data_process.py  model.py
ner/hemingkx-bert-lstm-crf/case/: bad_case.txt
nlp-baidu/: setup.sh  sum.py  uie.py
nlp-cls/: dataloader.py  shouxietch.py  text_cls_common.py  transformers_roberta_tensorrt.py  trt_common.py
nlp-cls/shouxie_bert_2/: common.py  data.py  main.py
nlp-ner/hemingkx-bert-lstm-crf/: config.py  data_loader.py  metrics.py  run.py  train.py  utils.py
nlp-re/: config.py  main.py  model.py  predict.py  split_data.py  utils.py
nlp-re-spo/: config.py  model.py  predict.py  split_data.py  utils.py
nlp-re-spo-tf/: task_relation_extraction_gplinker.py
nlp-re-spo/tch-berthg-crfsx/: main.py
nlp-re-spo/tf-bert4keras-gp/: split_data.py
nlp-sum/bert4keras-t5-pegasus/: train_with_finetune.py
nlp-sum/tch-barthg/: mypickle.py  test.py  train.py
nlp-wordcloud/: main.py  test.txt
onnx/: add_existing_symbol.py  add_torchscript_symbol.py  and_cplusplus_symbol.py  dynamic_axes.py  dynamic_axes_load.py  load.py  load_dynamic.py  my_add.cpp  setup.py  setup.sh  srcnn.py  srcnn_dynamic.py  torchscript.py
openvino/: image.py  misc_classification_onnx_wthlabels.py  resnet50_onnx_export_2ov.py  samples_classification_sample_async_wthlabels.py  samples_hello_classification_wthlabels.py  samples_hello_query_device.py  samples_hello_reshape_ssd_wthlabels.py  setup-mac.sh
openvino-cplus/: CMakeLists.txt  misc_classification_onnx_wthlabels.cpp  resnet_export_onnx.py  samples_hello_classification_wthlabels.cpp  setup.sh
openvino/samples_benchmark/: bert_benchmark.py  sync_benchmark.py  throughput_benchmark.py
openvino/samples_model_creation_sample/: data.py  model_creation_sample.py
openvino/samples_speech_sample/: arg_parser.py  file_options.py  speech_sample.py  utils.py
tensorrt/: CMakeLists.txt  naive_model.py  naive_model_onnx2trt.py  naive_model_trt_infer.cpp  naive_model_trt_infer.py
tensorrt-official/02-API/: TimingCache.py
tensorrt-official/03-BuildEngineByThensorRTAPI/: RNN-LSTM.py  calibrator.py
tensorrt-official/08-Advance/: Multicontext-MultiOptimizationProfile.py  VersionCompatibility.py
tensorrt-official/09-BestPractice/: ComputationInAdvance.py  EliminateSqueezeUnsqueezeTranspose.py
tensorrt-official/include/: Makefile.inc
tensorrt-web/: example1.cpp  example2.cpp  example2prof.cpp
transfer/: resnet.py
triton/: ensemble_client.py  image_client.py  labels.txt  minimal_client.py  resnet50_python_client.py  retry.sh  setup-container.sh  setup.sh  testrpt_official_bilibili.txt
triton-building_complex_pipelines/: client.py  export.py
triton-building_complex_pipelines/gui/: client.py
triton-cplus-client/: CMakeLists.txt  deps.sh  image_client.cc  simple_http_infer_client.cc
triton-fraud_detection_fil/: client.py  common.py  conda.yaml  config.py
triton/add_sub_python/: client.py  config.pbtxt
triton/batching_minimal/: config.pbtxt
triton/bls_async_python/: client.py  config.pbtxt
triton/bls_sync_python/: client.py  config.pbtxt
triton/ctc_decode_stateful_python/: client.py  config.pbtxt
triton/densenet_onnx/: client.py  config.pbtxt  config.pbtxt.openvino  config.pbtxt.tensorrt
triton/fraud_detection_fil/: client.py  common.py  config.py  train.py
triton/m1and2_ensemble/: config.pbtxt
triton/minimal_priority_ratelimiter_python/: client.py  config.pbtxt  test-priority.txt  test-ratelimit.txt
triton/minimal_priority_ratelimiter_python_ensemble/: config.pbtxt
triton/minimal_priority_ratelimiter_yat_python/: config.pbtxt
triton/model1_python/: config.pbtxt
triton/model2_python/: config.pbtxt
triton/nonbatching_minimal/: config.pbtxt
triton/pytorch_resnet50/: client.py  config.pbtxt
triton/raw_fil/: client.py  config.py  train.py
triton/resize_dali/: config.pbtxt  export-dali.py
triton/resnet50_ensemble/: client.py  config-pythontorch.pbtxt  config-pytorch.pbtxt
triton/resnet50_openvino/: client.py  config.pbtxt  export_onnx.py
triton/resnet50_python/: client.py  config.pbtxt
triton/resnet50_pythononnx/: config.pbtxt
triton/resnet50_pythontorch/: config.pbtxt
triton/resnet50_pytorch/: client-batch.py  client-nonbatch.py  client.py  config.batch.pbtxt  config.pbtxt  export-batch.py  export.py
triton/resnet50_tensorflow/: client.py  config.pbtxt
triton/resnet50_tensorrt/: client.py  config.pbtxt  export_onnx.py
triton/simple_python/: client-cudashm.py  client-shm.py  config-blstest.pbtxt  config.pbtxt
triton/square_int32_python/: client.py  config.pbtxt
triton/tensorflow_resnet50/: client.py  config.pbtxt  export.py
trtoff/00-MNISTData/: README.md
trtoff/01-SimpleDemo/: main.py
trtoff/02-API/: AlgorithmSelector.py
trtoff/03-BuildEngineByThensorRTAPI/: main.py
trtoff/07-Tool/: network_printer.py
trtoff/08-Advance/: HardwareCompatibility.py  MultiStream.py  Multicontext.py
trtoff/09-BestPractice/: AdjustReduceLayer.py  AlignSize.py  Convert3DMMTo2DMM.py  ConvertTranposeMultiplicationToConvolution.py  UsingMultiOptimizationProfile.py
trtoff/include/: Makefile.inc
yolov3/: config-stage2.json  config-stage3-noffload.json  config-stage3.json  detect.py  models.py  test.py  test_deepspeed.py  train-amp.py  train-deepspeed.py  train.py  zero-stage3.json
yolov3/utils/: datasets.py  logger.py  parse_config.py  utils.py
(+42 files in other folders)
